--- a/admin/etc/admin-api.yaml
+++ b/admin/etc/admin-api.yaml
@@ -1,3 +1,10 @@
-Name: admin-api
-Host: 0.0.0.0
-Port: 10002
+RestConf:
+  Name: admin-api
+  Host: 0.0.0.0
+  Port: 10002
+  
+RpcClientConf:
+  Etcd:
+    Hosts:
+      - 43.139.116.74:2379
+    Key: user.rpc
