--- a/device/etc/device.yaml
+++ b/device/etc/device.yaml
@@ -6,5 +6,6 @@ RpcServerConf:
       - 43.139.116.74:2379
     Key: device.rpc
 Mqtt:
-  Broker:
-    tcp://43.139.116.74:1883
+  Broker: tcp://43.139.116.74:1883
+  CLientID: go-mqtt-server-client-id
+  Password: '123456'
